--- a/db/public/fridgebay.html
+++ b/db/public/fridgebay.html
@@ -22,12 +22,222 @@
           <button class="btn btn-default" onclick="shoppingApp.showView('home')">Home page of fridge-bay </button>
           <button class="btn btn-default" onclick="shoppingApp.showView('profile')">Profile page of fridge-bay </button>
           <button class="btn btn-default" onclick="shoppingApp.showView('form')">Form for fridge-bay </button>
+          <button class="btn btn-default" onclick="shoppingApp.showView('login')">Login for fridge-bay </button>
+          <button class="btn btn-default" onclick="shoppingApp.showView('item')">Items for fridge-bay </button>
       </div>
 
       <div id="about-view" class="view">
           <p>The purpose of this website is to instruct students on how to navigate through pages</p>
           <button class="btn btn-default" onclick="shoppingApp.showView('shoppingList')">View your Shopping List now </button>
           <button class="btn btn-default" onclick="shoppingApp.showView('welcome')">Home</button>
+      </div>
+
+      <div id="item-view" class="view">
+          <button class="btn btn-default" onclick="shoppingApp.showView('shoppingList')">View your Shopping List now </button>
+          <button class="btn btn-default" onclick="shoppingApp.showView('welcome')">Home</button>
+        
+              Bran-bay-single-item
+
+              <div class="container">
+                  <table class="table">
+                      <tbody>
+                          <col width="150px" />
+                          <tr>
+                              <td>
+                                  <table class="table">
+                                      <tr>
+                                          <td>
+                                              <img src="http://www.internationalchntrading.com/UploadFiles/2013115102330195.jpg" height="90px">
+                                          </td>
+                                          <td rowspan="4">
+                                              <img src="http://www.internationalchntrading.com/UploadFiles/2013115102330195.jpg" height="420px">
+                                          </td>
+                                      </tr>
+                                      <tr>
+                                          <td>
+                                              <img src="http://www.internationalchntrading.com/UploadFiles/2013115102330195.jpg" height="90px">
+                                          </td>
+                                      </tr>
+                                      <tr>
+                                          <td>
+                                              <img src="http://www.internationalchntrading.com/UploadFiles/2013115102330195.jpg" height="90px">
+                                          </td>
+                                      </tr>
+                                      <tr>
+                                          <td>
+                                              <img src="http://www.internationalchntrading.com/UploadFiles/2013115102330195.jpg" height="90px">
+                                          </td>
+                                      </tr>
+                                  </table>
+                              </td>
+                              <td>
+                                  <table>
+                                      <tr>
+                                          <td height="200px"></td>
+                                      </tr>
+                                      <tr>
+                                          <td>
+                                              <table class="table">
+                                                  <tr>
+                                                      <td>Name</td>
+                                                      <td>Fridge</td>
+                                                  </tr>
+                                                  <tr>
+                                                      <td>Price</td>
+                                                      <td>$50.00</td>
+                                                  </tr>
+                                                  <tr>
+                                                      <td>Sell By</td>
+                                                      <td>09/01/2014</td>
+                                                  </tr>
+                                                  <tr>
+                                                      <td>Seller</td>
+                                                      <td>Kuuuku</td>
+                                                  </tr>
+                                              </table>
+                                          </td>
+                                      </tr>
+                                  </table>
+                              </td>
+                          </tr>
+                          <tr>
+                              <td colspan="2">
+                                  <ul class="list-group">
+                                      <li class="list-group-item">
+                                          <button class="btn btn-default" type="button">Interest in</button>
+                                      </li>
+                                      <li class="list-group-item">
+                                          <span class="label label-default">6 People interested</span>
+                                      </li>
+                                      <li class="list-group-item">
+                                          Condition: Good
+                                      </li>
+                                      <li class="list-group-item">
+                                          Quantity: 1
+                                      </li>
+                                      <li class="list-group-item">
+                                          Description
+                                      </li>
+                                      <li class="list-group-item">
+                                          <textarea class="form-control" rows="3"></textarea>
+                                      </li>
+                                  </ul>
+                              </td>
+                          </tr>
+                      </tbody>
+                  </table>
+            </div>      
+      </div>
+
+      <div id="login-view" class="view">
+          <button class="btn btn-default" onclick="shoppingApp.showView('shoppingList')">View your Shopping List now </button>
+          <button class="btn btn-default" onclick="shoppingApp.showView('welcome')">Home</button>
+         
+              Bran-bay-login-page
+              <div class="container">
+
+                  <table class="table table-striped">
+                      <col width="500px" />
+                      <thead>
+                          <tr class="text-center">
+                              <td><h3>Login</h3></td>
+                              <td><h3>Register</h3></td>
+                          </tr>
+                      </thead>
+
+                      <tbody>
+                          <tr>
+                              <td>
+                                  <form class="form-horizontal" role="form">
+                                      <div class="form-group">
+                                          <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
+                                          <div class="col-sm-10">
+                                              <div class="input-group">
+                                                  <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+                                                  <span class="input-group-addon">.edu</span>
+                                              </div>
+                                          </div>
+                                      </div>
+                                      <div class="form-group">
+                                          <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
+                                          <div class="col-sm-10">
+                                              <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+                                          </div>
+                                      </div>
+                                      <div class="form-group">
+                                          <div class="col-sm-offset-2 col-sm-10">
+                                              <div class="checkbox">
+                                                  <label>
+                                                      <input type="checkbox"> Remember me
+                                                  </label>
+                                              </div>
+                                          </div>
+                                      </div>
+                                      <div class="form-group">
+                                          <div class="col-sm-offset-2 col-sm-10">
+                                              <button type="submit" class="btn btn-default">Sign in</button>
+                                          </div>
+                                      </div>
+                                  </form>
+                              </td>
+                              <td>
+                                  <form class="form-horizontal" role="form">
+                                      <div class="form-group">
+                                          <label for="inputEmail3" class="col-sm-2 control-label">Username</label>
+                                          <div class="col-sm-10">
+                                              <input type="text" class="form-control" id="inputEmail3" placeholder="4-20 characters">
+                                          </div>
+                                      </div>
+                                      <div class="form-group">
+                                          <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
+                                          <div class="col-sm-10">
+                                              <div class="input-group">
+                                                  <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+                                                  <span class="input-group-addon">.edu</span>
+                                              </div>
+                                          </div>
+                                      </div>
+                                      <div class="form-group">
+                                          <label for="inputEmail3" class="col-sm-2 control-label">Cell Phone</label>
+                                          <div class="col-sm-10">
+                                              <input type="text" class="form-control" id="inputEmail3" placeholder="optional">
+                                          </div>
+                                      </div>
+                                      <div class="form-group">
+                                          <label for="inputEmail3" class="col-sm-2 control-label">Password</label>
+                                          <div class="col-sm-10">
+                                              <input type="password" class="form-control" id="inputEmail3" placeholder="6-20 characters">
+                                          </div>
+                                      </div>
+                                      <div class="form-group">
+                                          <label for="inputPassword3" class="col-sm-2 control-label">Verify Password</label>
+                                          <div class="col-sm-10">
+                                              <input type="password" class="form-control" id="inputPassword3" placeholder="6-20 characters">
+                                          </div>
+                                      </div>
+                                      <div class="form-group">
+                                          <div class="col-sm-offset-2 col-sm-10">
+                                              <label class="radio-inline">
+                                                  <input type="radio" name="inlineRadioOptions">Use Email as my Public Contact Information
+                                              </label>
+                                          </div>
+                                          <div class="col-sm-offset-2 col-sm-10">
+                                              <label class="radio-inline">
+                                                  <input type="radio" name="inlineRadioOptions">Use Phone Number as my Public Contact Information
+                                              </label>
+                                          </div>
+                                      </div>
+                                      <div class="form-group">
+                                          <div class="col-sm-offset-2 col-sm-10">
+                                              <button type="submit" class="btn btn-default">Register</button>
+                                          </div>
+                                      </div>
+                                  </form>
+                              </td>
+                          </tr>
+                      </tbody>
+                  </table>
+              </div>
       </div>
 
       <div id="home-view" class="view">
