--- a/fridgebay_app/platforms/android/assets/www/index.html
+++ b/fridgebay_app/platforms/android/assets/www/index.html
@@ -9,9 +9,7 @@
     <script src="js/model.js"></script>
     <script src="js/view.js"></script>
     <script src="js/controller.js"></script>
-
-
-
+    <script src="js/speech.js"></script>
 </head>
 <body>
     <div class="container">
@@ -25,8 +23,10 @@
             <button class="btn btn-default" onclick="shoppingApp.showView('login')">Login for fridge-bay </button>
             <button class="btn btn-default" onclick="shoppingApp.showView('item')">Items for fridge-bay </button>
         </div>
-
-
+        <div>
+	  Speech
+	  <button onclick="speech.reco()"> </button>
+	</div>
 
         <div id="item-view" class="view">
             <div class="checkbox-inline">
