--- a/fridgebay_html/public/fridgebay.html
+++ b/fridgebay_html/public/fridgebay.html
@@ -18,28 +18,28 @@
     	<nav class="navbar">
 			<div class="col-lg-2">
 				<div class="checkbox-inline">
-					<button class="btn btn-default" onclick="shoppingApp.showView('home')">Home page of fridge bay</button>
+					<button class="btn btn-default" onclick="fridgeApp.showView('home')">Home page of fridge bay</button>
 				</div>
 			</div>
 			<div class="col-lg-offset-8 col-lg-2">
 				<div class="checkbox-inline">
-					<button class="btn btn-default" onclick="shoppingApp.showView('login')">Login</button>
+					<button class="btn btn-default" onclick="fridgeApp.showView('login')">Login</button>
 				</div>
 			</div>
 			<div class="col-lg-2">
 				<div class="checkbox-inline">
-					<button class="btn btn-default" onclick="shoppingApp.showView('welcome')">Welcome Page</button>
+					<button class="btn btn-default" onclick="fridgeApp.showView('welcome')">Welcome Page</button>
 				</div>
 			</div>
         </nav>
 
         <div id="welcome-view" class="view">
-            <button class="btn btn-default" onclick="shoppingApp.showView('home')">Home page of fridge-bay </button>
-            <button class="btn btn-default" onclick="shoppingApp.showView('profile')">Profile page of fridge-bay </button>
-            <button class="btn btn-default" onclick="shoppingApp.showView('form')">Form for fridge-bay </button>
-            <button class="btn btn-default" onclick="shoppingApp.showView('login')">Login for fridge-bay </button>
-            <button class="btn btn-default" onclick="shoppingApp.showView('item')">Items for fridge-bay </button>
-            <button class="btn btn-default" onclick="shoppingApp.showView('model')">fridge-bay sample model </button>
+            <button class="btn btn-default" onclick="fridgeApp.showView('home')">Home page of fridge-bay </button>
+            <button class="btn btn-default" onclick="fridgeApp.showView('profile')">Profile page of fridge-bay </button>
+            <button class="btn btn-default" onclick="fridgeApp.showView('form')">Form for fridge-bay </button>
+            <button class="btn btn-default" onclick="fridgeApp.showView('login')">Login for fridge-bay </button>
+            <button class="btn btn-default" onclick="fridgeApp.showView('item')">Items for fridge-bay </button>
+            <button class="btn btn-default" onclick="fridgeApp.showView('model')">fridge-bay sample model </button>
         </div>
 
 		<div id="model-view" class="view">
@@ -480,7 +480,7 @@
 </body>
 <script>
     // this is the code that actually starts the JavaScript application!!
-    // when the document has been fully loaded, all the shoppingApp.start() method
-    $(document).ready(shoppingApp.start());
+    // when the document has been fully loaded, all the fridgeApp.start() method
+    $(document).ready(fridgeApp.start());
 </script>
 </html>
