clickability of columns

--- a/fridgebay_html/public/fridgebay.html
+++ b/fridgebay_html/public/fridgebay.html
@@ -353,19 +353,19 @@
                              
                             <tbody id="color2">
                               
-                                <tr>
+                                <tr class="changeImageColor"onclick="shoppingApp.showView('item')">
                                     <td><label>Fridge</label></td>
                                     <td><label>Upload Photo</label></td>
                                     <td><label>$50</label></td>
                                     <td><label>East</label></td>
                                 </tr>
-                                <tr>
+                                <tr class="changeImageColor" onclick="shoppingApp.showView('item')">
                                     <td><label>Abnormal Psych Textbook</label></td>
                                     <td><label>Upload Photo</label></td>
                                     <td><label>$60</label></td>
                                     <td><label>Village</label></td>
                                 </tr>
-                                <tr>
+                                <tr class="changeImageColor" onclick="shoppingApp.showView('item')">
                                     <td><label>Bike</label></td>
                                     <td><label>Upload Photo</label></td>
                                     <td><label>$70</label></td>
