--- a/fridgebay_html/public/fridgebay.html
+++ b/fridgebay_html/public/fridgebay.html
@@ -64,12 +64,15 @@
 						<thead>
 							<tr>
 								<th>Name</th>
-								<th>Price</th>
-								<th>Category</th>
-								<th>Quantity</th>
-								<th>Location</th>
 								<th>Seller</th>
+								<th>Price</th>
+								<th>Quantity</th>
+								<th>University</th>
+								<th>Location</th>
 								<th>Sell by</th>
+								<th>Condition</th>
+								<th>Main Category</th>
+								<th>Sub Category</th>
 							</tr>
 						</thead>
 		
@@ -639,8 +642,16 @@
 								<form class="form-inline" role="form">
 									<div class="form-group">
 										<label>Choose Item Main Category</label>
-										<select class="form-control" id="itemMainCategory">
-									
+										<select class="form-control" id="itemMainCategory" onchange="fridgeApp.refreshView()">
+											<option value=furniture> Furniture </option>
+											<option value=appliances> Appliances </option>
+											<option value=vehicles> Vehicles </option>
+											<option value=electronics> Electronics </option>
+											<option value=cutlery> Cutlery </option>
+											<option value=supplies> Supplies </option>
+											<option value=books> Books </option>
+											<option value=clothes> Clothes </option>
+											<option value=bed> Bed </option>
 										</select>
 									</div>							
 									<div class="form-group">
@@ -652,26 +663,26 @@
 								</form>
 								<br/>
 								<div class="panel" id="color">
-									<div class="panel-heading" id="color"><lable>Add up to 6 pictures for your item.</lable></div>
-									<div class="panel-body" id="color2">
-										<img src="..." alt="Click to add a Picture" class="img-thumbnail" width="180px">
-										<img src="..." alt="Click to add a Picture" class="img-thumbnail" width="180px">
-										<img src="..." alt="Click to add a Picture" class="img-thumbnail" width="180px">
-										<img src="..." alt="Click to add a Picture" class="img-thumbnail" width="180px">
-										<img src="..." alt="Click to add a Picture" class="img-thumbnail" width="180px">
-										<img src="..." alt="Click to add a Picture" class="img-thumbnail" width="180px">
+									<div class="panel-heading" id="color"><lable>Add up to 3 pictures for your item.</lable></div>
+									<div class="panel-body" id="color2">			
+										<input id="inputFileToLoad_0" type="file" onchange="fridgeApp.encodeImageFileAsURL(0);" accept="image/jpeg"/>
+										<div id="img_0"></div>
+										<input id="inputFileToLoad_1" type="file" onchange="fridgeApp.encodeImageFileAsURL(1);" accept="image/jpeg"/>
+										<div id="img_1"></div>
+										<input id="inputFileToLoad_2" type="file" onchange="fridgeApp.encodeImageFileAsURL(2);" accept="image/jpeg"/>
+										<div id="img_2"></div>
 									</div>
 								</div>
 							</td>
 							<td>
 								<form role="form">
 									<div>
-										<label for="itemName">Item Name</label>
+										<label>Item Name</label>
 										<input type="text" class="form-control" id="itemName" />
 									</div>
 									<div>
 										<label>Price</label>
-										<input type="number" class="form-control" id="itemName" />
+										<input type="number" class="form-control" id="itemPrice" />
 									</div>
 									<div>
 										<label>Condition</label>
@@ -707,7 +718,7 @@
 										<textarea class="form-control" rows="4" id="itemDesc"></textarea>
 									</div>
 									<div id="place_right">
-									<button type="submit" class="dark_brown">Submit</button>
+									<button type="submit" class="dark_brown" onclick="fridgeApp.addItem()">Submit</button>
 									</div>
 								</form>
 							</td>
@@ -737,6 +748,19 @@
     </div>
 </body>
 <script>
+	//check if the uploaded file is a picture.
+    function check() {
+		var ext = document.f.pic.value;
+	  		ext = ext.substring(ext.length-3,ext.length);
+	  		ext = ext.toLowerCase();
+	  		if(ext != 'jpg') {
+				alert('You selected a .'+ext+
+			  		' file; please select a .jpg file instead!');
+				return false; }
+	  		else
+				return true;
+	}
+
     // this is the code that actually starts the JavaScript application!!
     // when the document has been fully loaded, all the fridgeApp.start() method
     $(document).ready(fridgeApp.start());
