category options fixed

--- a/fridgebay_html/public/index.html
+++ b/fridgebay_html/public/index.html
@@ -679,7 +679,7 @@
 								<form class="form-inline" role="form">
 									<div class="form-group">
 										<label>Choose Item Main Category</label>
-										<select class="form-control" id="itemMainCategory" onchange="fridgeApp.refreshView()">
+										<select class="form-control" id="itemMainCategory" onchange="fridgeView.updateCategoryOptions()">
 											<option value=furniture> Furniture </option>
 											<option value=appliances> Appliances </option>
 											<option value=vehicles> Vehicles </option>
@@ -694,7 +694,12 @@
 									<div class="form-group">
 										<label>and Sub Category</label>
 										<select class="form-control" id="itemSubCategory">
-									
+											<option value=table> Table </option>
+											<option value=chair> Chair </option>
+											<option value=shelves> Shelves </option>
+											<option value=bookcase> Bookcase </option>
+											<option value=drawer> Drawer </option>
+											<option value=other> Other </option>
 										</select>
 									</div>
 								</form>
