--- a/fridgebay_html/public/index.html
+++ b/fridgebay_html/public/index.html
@@ -758,7 +758,7 @@
 										<textarea class="form-control" rows="4" id="itemDesc"></textarea>
 									</div>
 									<div id="place_right">
-									<button type="submit" class="dark_brown" onclick="fridgeApp.addItem()">Submit</button>
+									<button type="submit" class="dark_brown" onclick="fridgeApp.addItem(), fridgeApp.showView('home')">Submit</button>
 									</div>
 								</form>
 							</td>
