--- a/fridgebay_html/public/index.html
+++ b/fridgebay_html/public/index.html
@@ -678,26 +678,26 @@
 									<div class="form-group">
 										<label>Choose Item Main Category</label>
 										<select class="form-control" id="itemMainCategory" onchange="fridgeView.updateCategoryOptions()">
-											<option value=furniture> Furniture </option>
-											<option value=appliances> Appliances </option>
-											<option value=vehicles> Vehicles </option>
-											<option value=electronics> Electronics </option>
-											<option value=cutlery> Cutlery </option>
-											<option value=supplies> Supplies </option>
-											<option value=books> Books </option>
-											<option value=clothes> Clothes </option>
-											<option value=bed> Bed </option>
+											<option value="furniture"> Furniture </option>
+											<option value="appliances"> Appliances </option>
+											<option value="vehicles"> Vehicles </option>
+											<option value="electronics"> Electronics </option>
+											<option value="cutlery"> Cutlery </option>
+											<option value="supplies"> Supplies </option>
+											<option value="books"> Books </option>
+											<option value="clothes"> Clothes </option>
+											<option value="bed"> Bed </option>
 										</select>
 									</div>							
 									<div class="form-group">
 										<label>and Sub Category</label>
 										<select class="form-control" id="itemSubCategory">
-											<option value=table> Table </option>
-											<option value=chair> Chair </option>
-											<option value=shelves> Shelves </option>
-											<option value=bookcase> Bookcase </option>
-											<option value=drawer> Drawer </option>
-											<option value=other> Other </option>
+											<option value="table"> Table </option>
+											<option value="chair"> Chair </option>
+											<option value="shelves"> Shelves </option>
+											<option value="bookcase"> Bookcase </option>
+											<option value="drawer"> Drawer </option>
+											<option value="other"> Other </option>
 										</select>
 									</div>
 								</form>
