Modified controller and index.html

--- a/fridgebay_html/public/index.html
+++ b/fridgebay_html/public/index.html
@@ -759,7 +759,7 @@
 										<textarea class="form-control" rows="4" id="itemDesc"></textarea>
 									</div>
 									<div id="place_right">
-									<button type="submit" class="dark_brown" onclick="fridgeApp.addItem(), fridgeApp.showView('home'), fridgeApp.reloadModel()">Submit</button>
+									<button type="submit" class="dark_brown" onclick="fridgeApp.addItem(), fridgeApp.showView('home'), fridgeApp.reloadModel(), fridgeApp.clearForm()">Submit</button>
 									</div>
 								</form>
 							</td>
