--- a/fridgebay_html/public/index.html
+++ b/fridgebay_html/public/index.html
@@ -55,9 +55,8 @@
             <button class="btn btn-default" onclick="fridgeApp.showView('model')">fridge-bay sample model </button>
         </div>
 
-		<div id="model-view" class="view">
-            
-			<div class="container">
+        <div id="model-view" class="view">
+            <div class="container">
                 <div class="page-header">
                     <h1 class="heading_text">Model</h1>
                 </div>
@@ -72,49 +71,49 @@
                         <label class="right"><input id="priceCutoff" type=number class="form-control color5" placeholder="Search by Price" onchange="fridgeApp.refreshView()" /></label>
                     </div>
                 </div>
-				<div class="panel panel-default">
-					<div class="panel-heading">Items</div>
-					<div class="panel-body">
-					<table class="table table-striped">
-						<thead>
-							<tr>
-								<th>Name</th>
-								<th>Seller</th>
-								<th>Price</th>
-								<th>Quantity</th>
-								<th>University</th>
-								<th>Location</th>
-								<th>Sell by</th>
-								<th>Condition</th>
-								<th>Main Category</th>
-								<th>Sub Category</th>
-							</tr>
-						</thead>
-		
-						<tbody id="itemTableBodyItems">
-						</tbody>
-					</table>
-					</div>
-				</div>
-				<div class="panel panel-default">
-					<div class="panel-heading">Users</div>
-					<div class="panel-body">
-					<table class="table table-striped">
-						<thead>
-							<tr>
-								<th>Name</th>
-								<th>Phone</th>
-								<th>Email</th>
-							</tr>
-						</thead>
-		
-						<tbody id="itemTableBodyUsers">
-						</tbody>
-					</table>
-					</div>
-				</div>
-			</div>
-		</div>
+                <div class="panel panel-default">
+                        <div class="panel-heading">Items</div>
+                        <div class="panel-body">
+                        <table class="table table-striped">
+                                <thead>
+                                        <tr>
+                                                <th>Name</th>
+                                                <th>Seller</th>
+                                                <th>Price</th>
+                                                <th>Quantity</th>
+                                                <th>University</th>
+                                                <th>Location</th>
+                                                <th>Sell by</th>
+                                                <th>Condition</th>
+                                                <th>Main Category</th>
+                                                <th>Sub Category</th>
+                                                <th>Delete</th>
+                                        </tr>
+                                </thead>
+                                <tbody id="itemTableBodyItems">
+                                </tbody>
+                        </table>
+                        </div>
+                </div>
+                <div class="panel panel-default">
+                        <div class="panel-heading">Users</div>
+                        <div class="panel-body">
+                        <table class="table table-striped">
+                                <thead>
+                                        <tr>
+                                                <th>Name</th>
+                                                <th>Phone</th>
+                                                <th>Email</th>
+                                        </tr>
+                                </thead>
+
+                                <tbody id="itemTableBodyUsers">
+                                </tbody>
+                        </table>
+                        </div>
+                </div>
+        </div>
+</div>
 
         <div id="item-view" class="view">
            
