Mongoose Delete Function Working

--- a/fridgebay_html/public/index.html
+++ b/fridgebay_html/public/index.html
@@ -760,7 +760,7 @@
                                         <textarea class="form-control" rows="4" id="itemDesc"></textarea>
                                     </div>
                                     <div >
-                                        <center><button type="submit" class="dark_brown" onclick="fridgeApp.addItem(), fridgeApp.showView('home'), fridgeApp.reloadModel()">Submit</button></center>
+                                        <center><button type="submit" class="dark_brown" onclick="fridgeApp.addItem(),  fridgeApp.reloadModel(), fridgeApp.showView('home')">Submit</button></center>
                                     </div>
                                 </form>
                             </td>
