--- a/fridgebay_html/public/index.html
+++ b/fridgebay_html/public/index.html
@@ -205,35 +205,8 @@
 								  	<div class="list-group-item color2" >
 										<p class="list-group-item-text">
 											<table class="table">
-												<tbody class="color">
-													<tr>
-														<td>Item Name</td>
-														<td>Fridge</td>
-													</tr>
-													<tr>
-														<td>University</td>
-														<td>Brandeis University</td>
-													</tr>
-													<tr>
-														<td>Location</td>
-														<td>SCC</td>
-													</tr>
-													<tr>
-														<td>Price</td>
-														<td>$80.00</td>
-													</tr>
-													<tr>
-														<td>Quantity</td>
-														<td>1</td>
-													</tr>
-													<tr>
-														<td>Condition</td>
-														<td>Brand New</td>
-													</tr>
-													<tr>
-														<td>Description</td>
-														<td>Red and cute</td>
-													</tr>
+												<tbody id="tableBody" class="color">
+													
 												</tbody>	
 											</table>
 										</p>
